Fix alignment for agent popover on mobile view.

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -378,7 +378,7 @@
             .agent-featured-listing {
               width: 100%;
               .view-listing-button {
-                left: 146px;
+                left: 32%;
               }
             }
           }
